--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -2,13 +2,23 @@
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
-@media screen and (max-width: 1199px) {
-    body {
-        padding-left: 2rem;
-        padding-right: 2rem;
-    }
+body {
+    margin: 0;
+    padding: 0;
+    
 }
 
-body {
-    padding-top: 8rem;
+.card {
+    background: var(--card-background);
+     border: var(--card-border);
+     border-radius: 10px;
+     margin-bottom: 1rem;
+     padding: 2rem;
+ }
+
+#app {
+    width: 90%;
+    max-width: 1380px;
+    margin-left: auto;
+    margin-right: auto;
 }
