--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,5 +1,5 @@
 * {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: WF Visual Sans, Arial, sans-serif;
 }
 
 body {
@@ -17,8 +17,6 @@ body {
  }
 
 #app {
-    width: 90%;
-    max-width: 1380px;
-    margin-left: auto;
-    margin-right: auto;
+
 }
+
