--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,3 +1,13 @@
+@font-face { 
+  font-family:'WF Visual Sans';
+  src:url('https://dhygzobemt712.cloudfront.net/Fonts/VF/WFVisualSansVF.woff2')
+      format('woff2');
+  font-weight:100 900;
+  font-style:normal;
+  font-display:swap;
+  } 
+     
+
 * {
     font-family: WF Visual Sans, Arial, sans-serif;
 }
@@ -5,7 +15,11 @@
 body {
     margin: 0;
     padding: 0;
-    
+    line-height: 1.6;
+    font-size: 15px;
+    text-rendering: optimizeLegibility;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
 
 .card {
