--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -63,3 +63,12 @@ body {
                        var(--sb-track-color);
     }
   }
+
+.h1 {
+  margin-top: 0; 
+  margin-bottom: 0; 
+  font-family: WF Visual Sans,Arial,sans-serif; 
+  font-size: 5.313rem; 
+  font-weight: 600; 
+  line-height: 1.04;
+}
